src/mystyles.scss
@charset "utf-8";

// Import a Google Font
@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
$family-sans-serif: "Roboto", sans-serif;

// Set your brand colors
$orange: #FF9800;
$primary: $orange;

$widescreen-enabled: false;
$fullhd-enabled: false;
$control-border-width: 2px;
$input-border-color: transparent;
$input-shadow: none;

$box-shadow: 0 0 20px 5px #CCCCCC;

// Import only what you need from Bulma
@import "../node_modules/bulma/sass/utilities/_all.sass";
@import "../node_modules/bulma/sass/base/_all.sass";
@import "../node_modules/bulma/sass/components/level.sass";
@import "../node_modules/bulma/sass/elements/box.sass";
@import "../node_modules/bulma/sass/elements/button.sass";
@import "../node_modules/bulma/sass/elements/container.sass";
@import "../node_modules/bulma/sass/elements/content.sass";
@import "../node_modules/bulma/sass/elements/form.sass";
@import "../node_modules/bulma/sass/elements/icon.sass";
@import "../node_modules/bulma/sass/elements/image.sass";
@import "../node_modules/bulma/sass/elements/table.sass";
@import "../node_modules/bulma/sass/elements/title.sass";
@import "../node_modules/bulma/sass/grid/columns.sass";
@import "../node_modules/bulma/sass/grid/tiles.sass";
@import "../node_modules/bulma/sass/layout/hero.sass";
@import "../node_modules/bulma/sass/layout/section.sass";
@import "../node_modules/bulma/sass/components/card.sass";
@import "../node_modules/bulma/sass/components/media.sass";
@import "../node_modules/bulma/sass/components/navbar.sass";
@import "../node_modules/bulma-timeline/dist/css/bulma-timeline.sass";

html, body {
    height: 100%;
}

a {
    color: #2196F3;
    -webkit-transition: color 0.2s ease-in-out;
    transition: color 0.2s ease-in-out;
}

a:hover {
    color: #64B5F6;
}

p {
    text-align: justify;
}

@media screen and (min-width: 1088px) {
    .container {
        max-width: 1020px;
        width: 1020px;
    }
}

.navbar {
    box-shadow: 0 2px 5px #EEEEEE;
}

.navbar-item {
    -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
}

.navbar-item-img {
  vertical-align: middle;
}

#content {
    min-height: 90%;
}

.section {
    padding: 1rem 1.5rem 3rem 1.5rem;
}

.element {
    &.is-loading {
        position: relative;
        pointer-events: none;
        opacity: 0.5;
        &:after {
            @include loader;
            position: absolute;
            top: calc(30% - 2.5em);
            left: calc(50% - 2.5em);
            width: 5em;
            height: 5em;
            border-width: 0.25em;
        }
    }
}

.input {
    border-color: #dbdbdb;
    margin-bottom: 10px;
}

.select {
    margin-bottom: 10px;
}

.select select {
    border-color: #dbdbdb;
}

.card {
    box-shadow: 0 0 20px 5px #EEEEEE;
    height: 100%;
    width: 100%;
}

.unjustify {
    text-align: left !important;
}

.toc {
    padding: 1rem 1.5rem;
    background: #FAFAFA;
}

.footer {
    margin-top: 10px;
}

.footer-para {
    padding: 6px 0;
}

// Home
.home.box {
    padding: 0;
}
.home.cover {
    height: 100%;
    width: 100%;
    padding: 1.25rem;
    border-radius: 6px;
    background-color: transparent;
    -webkit-transition: background-color 0.2s ease-in-out;
    transition: background-color 0.2s ease-in-out;
}
.home.cover:hover {
    background-color: rgba(0, 0, 0, 0.4);
    cursor: pointer;
}
.home.title {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;
}
.home.education {
    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) 0% 0% / cover, url("img/education.jpg") no-repeat center / cover;
    height: 50vh;
}
.home.health {
    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) 0% 0% / cover, url("img/health.jpg") no-repeat center / cover;
    height: 50vh;
}
.home.community {
    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) 0% 0% / cover, url("img/community.jpg") no-repeat center / cover;
    height: 50vh;
}
.home.multifaith {
    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) 0% 0% / cover, url("img/multifaith.jpg") no-repeat center / cover;
    height: 50vh;
}

// About
.about.box {
    box-shadow: 0 0 20px 5px #EEEEEE;
}

.timeline-content {
    margin-left: 2em;
    padding: 16px 20px !important;
    border-radius: 5px;
    box-shadow: 0 0 20px 5px #EEEEEE;
    width: calc(100% - 2em);
}

.timeline-img {
  display: block;
  margin: 0 auto;
}

// Contact
.contact.tile {
    margin-top: 20px;
}
.contact.media {
    margin-bottom: 0 !important;
    justify-content: center;
}
.contact.image {
    max-height: 25rem;
    margin: 0 auto;
}
hr.contact {
    margin: 0.75rem 0;
}
.venmo {
    height: 28px;
}

// Join
form.join {
    max-width: 650px;
    margin: 0 auto;
}

.page.image {
    max-height: 25rem;
    box-shadow: 0 0 20px 6px #DDDDDD;
    margin: 0 auto;
}

// Images

.images { // used purely for sass loading
    background: url("img/logo.png");
    background: url("img/nutrition.jpg");
    background: url("img/venmo.png");
    background: url("img/yoga.jpg");
    background: url("img/facilities.jpg");
    background: url("img/tutoring.jpg");
    background: url("img/books.jpg");
    background: url("img/summer.jpg");
    background: url("img/lectures.jpg");
    background: url("img/soup.jpg");
    background: url("img/brunch.jpg");
    background: url("img/environment.jpg");
    background: url("img/childrens.jpg");
    background: url("img/drawings_signed.png");
    background: url("img/land_aerial.png");
    background: url("img/beginconstr.png");
    background: url("img/phase1_structure.png");
    background: url("img/phase1_completed.png");
    background: url("img/begin_yoga.png");
    background: url("img/begin_health.png");
    background: url("img/begin_brunchbites.png");
    background: url("img/begin_tutoring.png");
    background: url("img/sdsc_logo_small.png");
    background: url("img/BabaWithSmile.png
    ");
}

